# claude-batch

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.ai/: CONTEXT.md  PROJECT.md  PYTHON.md
.github/workflows/: ci.yaml
src/claude_batch/: cli.py
tests/: test_cli.py
