[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "claude-batch"
version = "0.0.0"
description = "CLI tool to send and manage Anthropic/Claude Batch API requests"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "click>=8.1,<9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.14.0",
  "basedpyright>=1.20.0",
]

[project.scripts]
claude-batch = "claude_batch.cli:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
ignore = []

[tool.basedpyright]
typeCheckingMode = "recommended"

[tool.pytest.ini_options]
addopts = ["-q"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.3",
]


